--- a/templates/employment.html
+++ b/templates/employment.html
@@ -6,6 +6,12 @@
     <title>Data Analyst Job Pie Charts</title>
     <!-- Include the D3.js library -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
+
+    <!-- Include your JavaScript code to load and create pie charts here -->
+    <script src="{{ url_for('static', filename='employment_logic.js') }}?v=123456"></script>
+
+    <!-- Include your CSS styles -->
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> -->
 </head>
 <body>
     <!-- Add a title or introductory content if needed -->
@@ -20,8 +26,5 @@
     <div id="VIC-pie-chart"></div>
     <div id="WA-pie-chart"></div>
     <div id="NSW-pie-chart"></div>
-    
-    <!-- Include your JavaScript code to load and create pie charts here -->
-    <script src="logic.js"></script>
 </body>
 </html>
