--- a/templates/employment.html
+++ b/templates/employment.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employment Type Statistics</title>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <!-- Include the D3.js library -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
@@ -22,18 +28,64 @@
 
         /* Style for individual pie chart divs */
         .chart {
-            flex-basis: calc(50% - 20px); /* Adjust the width as needed */
+            flex-basis: calc(50% - 20px);
+            /* Adjust the width as needed */
             margin: 10px;
-            border: 1px solid #ccc; /* Add a border for separation */
+            border: 1px solid #ccc;
+            /* Add a border for separation */
             padding: 10px;
             box-sizing: border-box;
         }
     </style>
 </head>
+
 <body>
+
+    <header>
+        <div class="navigation">
+            <nav class="navbar navbar-expand-md navbar-light bg-light">
+                <a class="navbar-brand" href="/"><img src="/static/images/home.jpg" style="width:70px;height:60px;"></a> 
+                <a class="navbar-brand" > AussieJobSearch </a>
+                <br>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="/dashboard"> Dashboard </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="/map" role="button" aria-haspopup="true"
+                                aria-expanded="false"> Map </a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Statistics </a>
+
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="/Employment"> Employment</a>
+                                <a class="dropdown-item" href="/Education"> Education </a>
+                                <a class="dropdown-item" href="/Publisher"> Publisher </a>
+                            </ul>
+                        </li>
+
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
     <!-- Add a title or introductory content if needed -->
     <h1>Employment Type Pie Charts per State</h1>
-    
+
     <!-- Container for pie charts -->
     <div class="chart-container">
         <!-- Pie charts for each state -->
@@ -46,5 +98,13 @@
         <div id="WA-pie-chart" class="chart"></div>
         <div id="NSW-pie-chart" class="chart"></div>
     </div>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+
 </body>
+
 </html>
