--- a/templates/education.html
+++ b/templates/education.html
@@ -17,6 +17,15 @@
     <script src="{{ url_for('static', filename='js/education_logic.js') }}?v=123456"></script>
     <!-- <script type="text/javascript" src="/static/js/education_logic.js"></script> -->
 
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+        integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+        crossorigin="" />
+
+    <!-- Our CSS -->
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+
+    
     <style>
         /* Style to display two pie charts in a row */
         .chart-container {
@@ -82,27 +91,31 @@
         </div>
     </header>
 
-
-    <!-- Add a title or introductory content if needed -->
-    <h1>Bachelor Degree Requirement for Data Jobs per State Statistics</h1>
-
     <!-- Container for pie charts -->
-    <div class="chart-container">
-        <!-- Pie charts for each state -->
-        <div id="SA-pie-chart" class="chart"></div>
-        <div id="QLD-pie-chart" class="chart"></div>
-        <div id="ACT-pie-chart" class="chart"></div>
-        <div id="NT-pie-chart" class="chart"></div>
-        <div id="TAS-pie-chart" class="chart"></div>
-        <div id="VIC-pie-chart" class="chart"></div>
-        <div id="WA-pie-chart" class="chart"></div>
-        <div id="NSW-pie-chart" class="chart"></div>
-    </div>
+        <div class="container" style="padding-left: 20px;"> <!-- Adjust padding as needed -->
+            <div class="chart-container" style="padding-top: 10px;">
+                <div class="row">
+                    <h2 class="title">Bachelor Degree Requirement for Data Jobs per State Statistics</h2>
+                    <hr>
+                    <!-- Pie charts for each state -->
+                    <div id="SA-pie-chart" class="chart"></div>
+                    <div id="QLD-pie-chart" class="chart"></div>
+                    <div id="ACT-pie-chart" class="chart"></div>
+                    <div id="NT-pie-chart" class="chart"></div>
+                    <div id="TAS-pie-chart" class="chart"></div>
+                    <div id="VIC-pie-chart" class="chart"></div>
+                    <div id="WA-pie-chart" class="chart"></div>
+                    <div id="NSW-pie-chart" class="chart"></div>
+                </div>
+            </div>
+        </div>
+        
 
-    <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        <!-- Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+
 
 </body>
 
