--- a/templates/employment.html
+++ b/templates/employment.html
@@ -16,6 +16,15 @@
     <!-- Include your JavaScript code to load and create pie charts here -->
     <script src="{{ url_for('static', filename='js/employment_logic.js') }}?v=123456"></script>
 
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+        integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+        crossorigin="" />
+
+    <!-- Our CSS -->
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+
+
     <!-- Include your CSS styles -->
     <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> -->
     <style>
@@ -44,8 +53,8 @@
     <header>
         <div class="navigation">
             <nav class="navbar navbar-expand-md navbar-light bg-light">
-                <a class="navbar-brand" href="/"><img src="/static/images/home.jpg" style="width:70px;height:60px;"></a> 
-                <a class="navbar-brand" > AussieJobSearch </a>
+                <a class="navbar-brand" href="/"><img src="/static/images/home.jpg" style="width:70px;height:60px;"></a>
+                <a class="navbar-brand"> AussieJobSearch </a>
                 <br>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -62,8 +71,8 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="/map" role="button" aria-haspopup="true"
-                                aria-expanded="false"> Map </a>
+                            <a class="nav-link" href="/map" role="button" aria-haspopup="true" aria-expanded="false">
+                                Map </a>
                         </li>
 
                         <li class="nav-item dropdown">
@@ -83,26 +92,28 @@
         </div>
     </header>
 
-    <!-- Add a title or introductory content if needed -->
-    <h1>Employment Type Pie Charts per State</h1>
-
     <!-- Container for pie charts -->
-    <div class="chart-container">
-        <!-- Pie charts for each state -->
-        <div id="SA-pie-chart" class="chart"></div>
-        <div id="QLD-pie-chart" class="chart"></div>
-        <div id="ACT-pie-chart" class="chart"></div>
-        <div id="NT-pie-chart" class="chart"></div>
-        <div id="TAS-pie-chart" class="chart"></div>
-        <div id="VIC-pie-chart" class="chart"></div>
-        <div id="WA-pie-chart" class="chart"></div>
-        <div id="NSW-pie-chart" class="chart"></div>
-    </div>
-
-    <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        <div class="container" style="padding-left: 20px;"> <!-- Adjust padding as needed -->
+            <div class="chart-container" style="padding-top: 10px;">
+                <div class="row">
+                    <h2 class="title">Employment Type of Data Jobs per State Statistics</h2>
+                    <hr>
+                    <!-- Pie charts for each state -->
+                    <div id="SA-pie-chart" class="chart"></div>
+                    <div id="QLD-pie-chart" class="chart"></div>
+                    <div id="ACT-pie-chart" class="chart"></div>
+                    <div id="NT-pie-chart" class="chart"></div>
+                    <div id="TAS-pie-chart" class="chart"></div>
+                    <div id="VIC-pie-chart" class="chart"></div>
+                    <div id="WA-pie-chart" class="chart"></div>
+                    <div id="NSW-pie-chart" class="chart"></div>
+                </div>
+            </div>
+        </div>
+        <!-- Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 
 
 </body>
